corrected error to the 'slide' class which left the fade-in text visible to prematurely. Also switched to using cloud stored Bebas Neue Font by google.

--- a/Project_public/resources/css/default.scss
+++ b/Project_public/resources/css/default.scss
@@ -1,9 +1,6 @@
 @font-face {
-  font-family: 'Bebas Neue';
-  src: url(../fonts/bebasneue/BebasNeue-Regular.eot);
-  src: url(../fonts/bebasneue/BebasNeue-Regular.eot?#iefix) format('embedded-opentype'),
-  url(../fonts/bebasneue/BebasNeue-Regular.woff) format('woff'),
-  url(../fonts/bebasneue/BebasNeue-Regular.ttf) format('truetype');
+  font-family: 'Bebas Neue', cursive;
+  src: url(https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap);
 
   font-weight: normal;
   font-style: normal;
@@ -646,7 +643,7 @@ table a {
 .slide {
   text-align: left;
   position: absolute;
-  left: -300px;
+  left: -400px;
   animation: slide 2s forwards, fadeIn ease 2.5s;
   animation-delay: 1s;
 }
